--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
+    "@types/jest": "24.0.18",
     "@types/jsonwebtoken": "8.3.3",
     "@types/koa": "2.0.49",
     "@types/koa-bodyparser": "4.3.0",
@@ -24,8 +25,11 @@
     "@types/koa-static": "4.0.1",
     "@types/node": "12.7.3",
     "concurrently": "4.1.2",
+    "jest": "24.9.0",
     "nodemon": "1.19.1",
     "prettier": "1.18.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "24.1.0",
     "ts-node": "8.3.0",
     "typescript": "3.6.2"
   },
