--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/dotenv": "6.1.1",
     "@types/bcrypt": "3.0.0",
+    "@types/dotenv": "6.1.1",
     "@types/jest": "24.0.18",
     "@types/jsonwebtoken": "8.3.3",
     "@types/koa": "2.0.49",
@@ -29,6 +29,7 @@
     "@types/node": "12.7.3",
     "concurrently": "4.1.2",
     "jest": "24.9.0",
+    "mockdate": "^2.0.5",
     "nodemon": "1.19.1",
     "prettier": "1.18.2",
     "supertest": "4.0.2",
